hopefully fixed weird title cutoff

--- a/app/components/MobileNav/mobile-nav.module.css
+++ b/app/components/MobileNav/mobile-nav.module.css
@@ -1,6 +1,8 @@
 .title {
     align-self: center;
     font-size: 36px;
+    width: 100%;
+    text-align: center;
 }
 
 .nav {
